// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BodyText should render as article element, when passed "article" for the element prop 1`] = `
.circuit-0 {
  font-weight: 400;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
}

.circuit-1 {
  font-size: 15px;
  line-height: 24px;
}

<article
  className="circuit-0 circuit-1 "
>
  ARTICLE heading
</article>
`;

exports[`BodyText should render as div element, when passed "div" for the element prop 1`] = `
.circuit-0 {
  font-weight: 400;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
}

.circuit-1 {
  font-size: 15px;
  line-height: 24px;
}

<div
  className="circuit-0 circuit-1 "
>
  DIV heading
</div>
`;

exports[`BodyText should render as p element, when passed "p" for the element prop 1`] = `
.circuit-0 {
  font-weight: 400;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
}

.circuit-1 {
  font-size: 15px;
  line-height: 24px;
}

<p
  className="circuit-0 circuit-1 "
>
  P heading
</p>
`;

exports[`BodyText should render with size giga, when passed "giga" for the size prop 1`] = `
.circuit-0 {
  font-weight: 400;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
}

.circuit-1 {
  font-size: 18px;
  line-height: 28px;
}

<p
  className="circuit-0 circuit-1 "
>
  giga heading
</p>
`;

exports[`BodyText should render with size kilo, when passed "kilo" for the size prop 1`] = `
.circuit-0 {
  font-weight: 400;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
}

.circuit-1 {
  font-size: 13px;
  line-height: 20px;
}

<p
  className="circuit-0 circuit-1 "
>
  kilo heading
</p>
`;

exports[`BodyText should render with size mega, when passed "mega" for the size prop 1`] = `
.circuit-0 {
  font-weight: 400;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
}

.circuit-1 {
  font-size: 15px;
  line-height: 24px;
}

<p
  className="circuit-0 circuit-1 "
>
  mega heading
</p>
`;
